...

    var id: String { rawValue }

    var title: String {
        switch self {
        case .lagoon: String(localized: "Lagoon")
        case .babyPink: String(localized: "Baby Pink")
        case .spooky: String(localized: "Spooky")
        }
    }

    var settingsDescription: String {
        switch self {
...
